<resources>
    <string name="app_name">Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="decimal_separator">.</string>
    <string name="operator_minus">-</string>
    <string name="operator_plus">+</string>
    <string name="operator_multiply">×</string>
    <string name="operator_divide">÷</string>
    <string name="operator_equal">=</string>
    <string name="operator_drop">C</string>
    <string name="operator_percent">%</string>
    <string name="operator_change_sign">±</string>
    <string name="theme_light">Светлая тема</string>
    <string name="theme_dark">Темная тема</string>
    <string name="settings">⚙</string>
    <string name="set_settings">Применить</string>
</resources>