<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/scoreboard"
                style="@style/ScoreboardStyle"
                android:layout_span="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/operator_drop"
                android:text="@string/operator_drop"
                style="@style/ButtonSpecialOperatorStyle"/>

            <Button
                android:id="@+id/operator_change_sign"
                android:text="@string/operator_change_sign"
                style="@style/ButtonSpecialOperatorStyle"/>

            <Button
                android:id="@+id/operator_percent"
                android:text="@string/operator_percent"
                style="@style/ButtonSpecialOperatorStyle"/>

            <Button
                android:id="@+id/operator_divide"
                android:text="@string/operator_divide"
                style="@style/ButtonOperatorStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/number_1"
                android:text="@string/number_1"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_2"
                android:text="@string/number_2"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_3"
                android:text="@string/number_3"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/operator_multiply"
                android:text="@string/operator_multiply"
                style="@style/ButtonOperatorStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/number_4"
                android:text="@string/number_4"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_5"
                android:text="@string/number_5"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_6"
                android:text="@string/number_6"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/operator_minus"
                android:text="@string/operator_minus"
                style="@style/ButtonOperatorStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/number_7"
                android:text="@string/number_7"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_8"
                android:text="@string/number_8"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/number_9"
                android:text="@string/number_9"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/operator_plus"
                android:text="@string/operator_plus"
                style="@style/ButtonOperatorStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/number_0"
                android:text="@string/number_0"
                android:layout_span="2"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/decimal_separator"
                android:text="@string/decimal_separator"
                style="@style/ButtonNumberStyle"/>

            <Button
                android:id="@+id/operator_equal"
                android:text="@string/operator_equal"
                style="@style/ButtonOperatorStyle"/>

        </TableRow>

    </TableLayout>

</FrameLayout>