<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3"
                android:textSize="@dimen/number_text_size"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/number_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_6"
                android:textSize="@dimen/number_text_size"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/number_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_7"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_8"
                android:textSize="@dimen/number_text_size"/>

            <Button
                android:id="@+id/number_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_9"
                android:textSize="@dimen/number_text_size"/>

        </TableRow>

    </TableLayout>

</FrameLayout>