<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/theme_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/theme_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_settings"
            style="@style/OtherButton"
            android:text="@string/set_settings" />

    </LinearLayout>

</FrameLayout>